# prefix-sum

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  batch_test.py
src/: common.h  cpu.cc  cuda.cu  main.cc
